Fix imports and replace List.of (JDK9+) with Collections.singletonList